// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/browserify.js watchify shouldn't cache file contents between watchify runs 1`] = `
"/* packages/browserify/test/output/watchify/watched.css */
.mc6204d2f5_wooga { color: red; }
"
`;

exports[`/browserify.js watchify shouldn't cache file contents between watchify runs 2`] = `
"/* packages/browserify/test/output/watchify/watched.css */
.mc6204d2f5_wooga { color: blue; }
"
`;

exports[`/browserify.js watchify shouldn't explode on invalid CSS 1`] = `
"/* packages/browserify/test/output/watchify/watched.css */
.mc6204d2f5_wooga { color: blue; }
"
`;
